--- a/C#Web/TaskBoardApp/Views/Shared/_Layout.cshtml
+++ b/C#Web/TaskBoardApp/Views/Shared/_Layout.cshtml
@@ -24,6 +24,10 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Board" asp-action="Index">Board</a>
                             </li>
+                            
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Task" asp-action="Create">Create a new task</a>
+                            </li>
                         }
                         else
                         {
