--- a/C#Web/Homies/Homies/Views/Event/Details.cshtml
+++ b/C#Web/Homies/Homies/Views/Event/Details.cshtml
@@ -1,8 +1,8 @@
-﻿@{
+﻿@model EventDetailsViewModel
+@{
     ViewBag.Title = "Event Details";
 }
 
-@*
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
@@ -30,4 +30,3 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
-*@
